# ProfilesArchiveInstagram

./: .gitignore  README.md  README_arquivologia.md  WebscrapingInstagram.py  WebscrapingInstagram_complete.py  WebscrapingInstagram_v1.py  WebscrapingInstagram_wkflw.py  WebscrapingInstagram_wkflw_test.py  keywords.txt  lista.txt  lista_07052022.csv  lista_07052022.md  lista_08052022.csv  lista_08052022.md  lista_20032022.csv  lista_20032022.md  lista_22042022.csv  lista_22042022.md  lista_28122022.md  lista_atual.csv  lista_atual.md  lista_md.md  lista_organizada.csv  lista_organizada.md  login.txt  pyproject.toml  requeriments.txt  selecionar_perfis.py
.github/: python-selenium.yml
.github/workflows/: python-publish.yml  python-selenium.yml  python-selenium_tests.yml
