[tool.poetry]
name = "WebscrapingInstagram"
version = "0.1"
description = "Selenium WebDriver example"
authors = ["Claudio Paulo"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"